changed source path

--- a/Invoices/invoices.html
+++ b/Invoices/invoices.html
@@ -97,44 +97,44 @@
         <div class="sidebar">
             <ul class="sidebar-list margin-top">
                 <li class="dashboard sidebar-list-item">
-                    <a href="/VendorManagement/Dashboard/index.html"><i class="fa-solid fa-gauge-high"></i><span
+                    <a href="../Dashboard/index.html"><i class="fa-solid fa-gauge-high"></i><span
                             class="sidebar-text">Dashboards</span></a>
                 </li>
                 <li class="RFQS sidebar-list-item">
-                    <a href="/VendorManagement/RFQ/RFQ.html"><i class="fa-regular fa-clipboard"></i><span
+                    <a href="../RFQ/RFQ.html"><i class="fa-regular fa-clipboard"></i><span
                             class="sidebar-text">RFQS</span></a>
                 </li>
                 <li class="auction sidebar-list-item">
-                    <a href="/VendorManagement/Auction/Auction.html"><i class="fa-solid fa-volume-high"></i><span class="sidebar-text">Auctions</span></a>
+                    <a href="../Auction/Auction.html"><i class="fa-solid fa-volume-high"></i><span class="sidebar-text">Auctions</span></a>
                 </li>
                 <li class="purchase- order sidebar-list-item">
-                    <a href="/VendorManagement/PurchaseOrder/purchaseorder.html"><i
+                    <a href="../PurchaseOrder/purchaseorder.html"><i
                             class="fa-regular fa-credit-card"></i><span class="sidebar-text">Purchase
                             Orders</span></a>
                 </li>
                 <li class="rate-contracts sidebar-list-item">
-                    <a href="/VendorManagement/RateContracts/rate.html"><i class="fa-regular fa-circle-check"></i><span class="sidebar-text">Rate
+                    <a href="../RateContracts/rate.html"><i class="fa-regular fa-circle-check"></i><span class="sidebar-text">Rate
                             Contracts</span></a>
                 </li>
                 <li class="invoice sidebar-list-item">
-                    <a href="/VendorManagement/Invoices/invoices.html"><i class="fa-regular fa-file-lines"></i><span
+                    <a href="./invoices.html"><i class="fa-regular fa-file-lines"></i><span
                             class="sidebar-text">Invoices</span></a>
                 </li>
                 <li class="GRN sidebar-list-item">
-                    <a href="/VendorManagement/GRN/GRN.html"><i class="fa-solid fa-cart-flatbed-suitcase"></i><span class="sidebar-text">GRN</span></a>
+                    <a href="../GRN/GRN.html"><i class="fa-solid fa-cart-flatbed-suitcase"></i><span class="sidebar-text">GRN</span></a>
                 </li>
                 <li class="catalogue sidebar-list-item">
-                    <a href="/VendorManagement/Catalogue/Catalogue.html"><i class="fa-regular fa-user"></i><span
+                    <a href="../Catalogue/Catalogue.html"><i class="fa-regular fa-user"></i><span
                             class="sidebar-text">Catalogue</span></a>
                 </li>
                 <li class="profile sidebar-list-item">
-                    <a href="/VendorManagement/Profile/profile.html"><i class="fa-regular fa-user"></i><span class="sidebar-text">Profile</span></a>
+                    <a href="../Profile/profile.html"><i class="fa-regular fa-user"></i><span class="sidebar-text">Profile</span></a>
                 </li>
                 <li class="tickets sidebar-list-item">
                     <a href="#"><i class="fa-solid fa-ticket"></i><span class="sidebar-text">Tickets</span></a>
                 </li>
                 <li class="registration sidebar-list-item">
-                    <a href="/VendorManagement/vendor_registration/registration.html"><i class="fa-solid fa-address-card"></i><span
+                    <a href="../vendor_registration/registration.html"><i class="fa-solid fa-address-card"></i><span
                             class="sidebar-text">Vendor Registration</span></a>
                 </li>
             </ul>
