--- a/Dashboard/dashboard.html
+++ b/Dashboard/dashboard.html
@@ -158,7 +158,7 @@
     <div class="sidebar">
         <ul class="sidebar-list margin-top">
             <li class="dashboard sidebar-list-item">
-                <a href="./index.html"><i class="fa-solid fa-gauge-high"></i><span class="sidebar-text">Dashboards</span></a>
+                <a href="./dashboard.html"><i class="fa-solid fa-gauge-high"></i><span class="sidebar-text">Dashboards</span></a>
             </li>
             <li class="RFQS sidebar-list-item">
                 <a href="../RFQ/RFQ.html"><i class="fa-regular fa-clipboard"></i><span
