--- a/vendor_registration/registration.html
+++ b/vendor_registration/registration.html
@@ -63,7 +63,7 @@
         <ul class="sidebar-list margin-top">
             
             <li class="dashboard sidebar-list-item">
-                <a href="../Dashboard/index.html"><i class="fa-solid fa-gauge-high"></i><span
+                <a href="../Dashboard/dashboard.html"><i class="fa-solid fa-gauge-high"></i><span
                         class="sidebar-text">Dashboards</span></a>
             </li>
             <li class="RFQS sidebar-list-item">
