--- a/Invoices/invoices.html
+++ b/Invoices/invoices.html
@@ -97,7 +97,7 @@
         <div class="sidebar">
             <ul class="sidebar-list margin-top">
                 <li class="dashboard sidebar-list-item">
-                    <a href="../Dashboard/index.html"><i class="fa-solid fa-gauge-high"></i><span
+                    <a href="../Dashboard/dashboard.html"><i class="fa-solid fa-gauge-high"></i><span
                             class="sidebar-text">Dashboards</span></a>
                 </li>
                 <li class="RFQS sidebar-list-item">
